--- a/configserver/src/main/resources/configurations/groupeservice.yml
+++ b/configserver/src/main/resources/configurations/groupeservice.yml
@@ -14,9 +14,20 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/exemple
     username: postgres
-    password: postgres
+    password: 50145014
   jpa:
     hibernate:
       ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: myGroup
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: '*'
+    topic:
+      name: quickstart-events
