--- a/configserver/src/main/resources/configurations/postservice.yml
+++ b/configserver/src/main/resources/configurations/postservice.yml
@@ -14,9 +14,16 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/exemple
     username: postgres
-    password: postgres
+    password: 50145014
   jpa:
     hibernate:
       ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    topic:
+      name: quickstart-events
