--- a/configserver/src/main/resources/configurations/usedservice.yml
+++ b/configserver/src/main/resources/configurations/usedservice.yml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/exemple
     username: postgres
-    password: postgres
+    password: 50145014
   jpa:
     hibernate:
       ddl-auto: update
