fix error circuit breaker

--- a/configserver/src/main/resources/configurations/groupeservice.yml
+++ b/configserver/src/main/resources/configurations/groupeservice.yml
@@ -21,27 +21,27 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 management:
-    endpoint:
-        health:
-        show-details: always
-    endpoints:
-        web:
-        exposure:
-            include: health
+  endpoint:
     health:
-        circuitbreakers:
-        enabled: true
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health
+  health:
+    circuitbreakers:
+      enabled: true
 resilience4j:
-    circuitbreaker:
-        instances:
-        UserService:
-            registerHealthIndicator: true
-            eventConsumerBufferSize: 10
-            failureRateThreshold: 50
-            minimumNumberOfCalls: 5
-            automaticTransitionFromOpenToHalfOpenEnabled: true
-            waitDurationInOpenState: 10s
-            permittedNumberOfCallsInHalfOpenState: 2
-            slidingWindowSize: 10
-            slidingWindowType: COUNT_BASED
+  circuitbreaker:
+    instances:
+      userserice:
+        registerHealthIndicator: true
+        eventConsumerBufferSize: 10
+        failureRateThreshold: 50
+        minimumNumberOfCalls: 5
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 10s
+        permittedNumberOfCallsInHalfOpenState: 2
+        slidingWindowSize: 10
+        slidingWindowType: COUNT_BASED
 
