--- a/configserver/src/main/resources/configurations/gateway.yml
+++ b/configserver/src/main/resources/configurations/gateway.yml
@@ -59,3 +59,7 @@ spring:
           uri: lb://identityservice
           predicates:
             - Path=/auth/**
+management:
+  tracing:
+    sampling:
+      probability: 1.0
