--- a/identityservice/src/main/resources/application.yml
+++ b/identityservice/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/exemple
     username: postgres
-    password: postgres
+    password: 123456789
   jpa:
     hibernate:
       ddl-auto: update
